@@ -1,8 +1,8 @@
 /***************************************************************************
-                          rksettingsmodulephp  -  description
+                          rksettingsmoduledebug -  description
                              -------------------
-    begin                : Wed Jul 28 2004
-    copyright            : (C) 2004 by Thomas Friedrichsmeier
+    begin                : Tue Oct 23 2007
+    copyright            : (C) 2007 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -14,24 +14,25 @@
  *   (at your option) any later version.                                   *
  *                                                                         *
  ***************************************************************************/
-#ifndef RKSETTINGSMODULEPHP_H
-#define RKSETTINGSMODULEPHP_H
+#ifndef RKSETTINGSMODULEDEBUG_H
+#define RKSETTINGSMODULEDEBUG_H
 
 #include "rksettingsmodule.h"
 
-class GetFileNameWidget;
+class RKSpinBox;
+class QButtonGroup;
 
 /**
-configuration for the PHP-backend
+configuration for the Command Editor windows
 
 @author Thomas Friedrichsmeier
 */
-class RKSettingsModulePHP : public RKSettingsModule {
+class RKSettingsModuleDebug : public RKSettingsModule {
 	Q_OBJECT
 public:
-	RKSettingsModulePHP (RKSettings *gui, QWidget *parent);
+	RKSettingsModuleDebug (RKSettings *gui, QWidget *parent);
 
-	~RKSettingsModulePHP ();
+	~RKSettingsModuleDebug ();
 	
 	bool hasChanges ();
 	void applyChanges ();
@@ -42,14 +43,13 @@ public:
 	
 	QString caption ();
 
-/// returns the filename of the php-binary
-	static QString &phpBin () { return php_bin; };
+	// static members are declared in debug.h and defined in main.cpp
 public slots:
-	void pathChanged ();
+	void settingChanged (int);
 private:
-	GetFileNameWidget *bin_choser;
-
-	static QString php_bin;
+	RKSpinBox* command_timeout_box;
+	RKSpinBox* debug_level_box;
+	QButtonGroup* debug_flags_group;
 };
 
 #endif
