@@ -1,3 +1,9 @@
+- settings dialog is now shown in "page list" mode
+- port to KDE 4			(TODO)
+
+---- KDE 3 versions
+
+
 - Fixed: Meta information (labels) did not get shown correctly in the data editor
 - Add command line option "--debugger" for debugging purposes
 - Fixed: Pressing the add button in a varslot with no object selected could crash RKWard
